# superopt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  main.c  requirements.txt  setup.bash
day/0/: log.txt
day/1/: log.txt  oneday.c  oneday.h
day/2/: CMakeLists.txt  oneday.c
day/3/: log.txt  oneday.c  oneday.h
day/4/: mcmc.h
day/5/: sopt.c  sopt.py
day0/: log.txt
doc/shellstorm/shell-storm.org/x86doc/: AAA.html  AAD.html  AAM.html  AAS.html  ADC.html  ADCX.html  ADD.html  ADDPD.html  ADDPS.html  ADDSD.html  ADDSS.html  ADDSUBPD.html  ADDSUBPS.html  ADOX.html  AESDEC.html  AESDECLAST.html  AESENC.html  AESENCLAST.html  AESIMC.html  AESKEYGENASSIST.html  AND.html  ANDN.html  ANDNPD.html  ANDNPS.html  ANDPD.html  ANDPS.html  ARPL.html  BEXTR.html  BLENDPD.html  BLENDPS.html  BLENDVPD.html  BLENDVPS.html  BLSI.html  BLSMSK.html  BLSR.html  BNDCL.html  BNDCU_BNDCN.html  BNDLDX.html  BNDMK.html  BNDMOV.html  (+585 more)
misc/: decoder.model  decoder.vocab  encoder.model  encoder.vocab  superopt.model  superopt.vocab  x86_dictionary  x86_sopt_32k.model  x86_sopy_32k.vocab  x86_sp8k.model  x86_sp8k.vocab  x86_zstd_sopt.model  x86_zstd_sopt.vocab  x86sopt.model  x86sopt.vocab
src/: common.h  create_optimization_dataset.py  encdectest.py  generate_c.py  main.c  mcmc.c  riscv.c  riscv_sopt.py  sopt.c  sopt.py  tonygrad.c  tonygrad.h
src/sopt/: codegen.py  create_optimization_dataset.py  gen.py  impl.py  infer.py  minimal.py  model.py  parsex86.py  riscv.py  train.py  util.py  utils.py  x86.py
